* Fix bug in FF where there were ugly outlines around a, img, and button elements. * Fix issue in FF where time indicator did not align with heatmap.

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -24,7 +24,7 @@ menu, nav, output, ruby, section, summary, time, mark, audio, video {
     -webkit-font-smoothing: subpixel-antialiased;
 }
 
-a, a:link, a:visited, a:active, a:hover { outline: 0; }
+a, a:link, a:visited, a:active, a:hover, button, img { outline: 0; }
 
 object, embed, video, iframe { 
     max-width: 100%; 
@@ -116,7 +116,7 @@ object, embed, video, iframe {
                     width: 640px;
 
                     div.mejs-time-rail {
-                        top: 390px;
+                        top: 390.5px;
                         bottom: 0;
                         float: none;
                         height: 6px;
